--- a/www/index.html
+++ b/www/index.html
@@ -94,7 +94,7 @@
 
                 <div class="b-content__lider-previous">
                   <p><a href="#" class="text bold">Предидущие победители</a></p>
-                  <div>
+                  <div class="b-content__container">
                     <a href="#" title="" class="b-content__lider-previous-item">
                       <img src="/img/temp/img-previous-1.jpg" alt="">
                     </a>
