--- a/www/my-car.html
+++ b/www/my-car.html
@@ -46,8 +46,9 @@
           <li><a href="#" title="" class="text bold">Компании</a></li>
           <li><a href="#" title="" class="text bold">Барахолка</a></li>
         </ul>
-        <button class="b-menu__wrapp-login button small text bold col xs-offset-1 xs-1">Войти</button>
+
         <!-- Попап входа -->
+<!--         <button class="b-menu__wrapp-login button small text bold col xs-offset-1 xs-1">Войти</button>
         <div class="b-menu__wrapp-login-popup">
           <div class="b-menu__wrapp-login-popup-close"></div>
           <form action="/" method="POST" class="b-menu__wrapp-login-popup-enter">
@@ -56,6 +57,10 @@
             <input type="submit" value="Войти" class="button middle">
             <button type="button" class="button middle button-registration">Регистрация</button>
           </form>
+        </div> -->
+        <div class="b-menu__wrapp-login-nav">
+          <img src="/img/temp/author/author-1.jpg" alt="" class="b-menu__wrapp-login-nav-photo">
+          <p class="b-menu__wrapp-login-nav-name text">Leonidis Castonedis</p>
         </div>
       </nav>
     </header>
