Страница добавления авто

--- a/www/index.html
+++ b/www/index.html
@@ -36,7 +36,8 @@
     </style>
 
       <a href="main.html" title="">Main HTML</a><br />
-      <a href="my-car.html" title="">About car HTML</a>
+      <a href="my-page.html" title="">My home page HTML</a><br />
+      <a href="add-my-car.html" title="">Add my car HTML</a><br />
 
   </body>
 </html>
