Добавлены страницы + логика инпут

--- a/www/index.html
+++ b/www/index.html
@@ -38,6 +38,12 @@
       <a href="main.html" title="">Main HTML</a><br />
       <a href="my-page.html" title="">My home page HTML</a><br />
       <a href="add-my-car.html" title="">Add my car HTML</a><br />
+      <a href="edit-my-profile.html" title="">Edit my page HTML</a><br />
+      <a href="community.html" title="">Community page HTML</a><br />
+      <!-- <a href="my-blog.html" title="">My blog page HTML</a><br /> -->
+      <a href="add-blog.html" title="">ADD blog page HTML</a><br />
+      <a href="company.html" title="">Company page HTML</a><br />
+      <!-- <a href="testdrive.html" title="">Testdrive page HTML</a><br /> -->
 
   </body>
 </html>
